--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,11 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+user1:
+  email: "meysammeisam@gmail.com"
+  username: "meysam"
+  encrypted_password: "$2a$10$pvEcGbzGENmEeOxJuVn4DepiR5ip12r/rw0fr7293rxXddImIv7n2"
+  sign_in_count: 1
 
-# This model initially had no columns defined.  If you add columns to the
-# model remove the '{}' from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+user2:
+  email: "mojtaba.ghorbanalibeik@gmail.com"
+  username: "mojtaba"
+  encrypted_password: "3b1bce3d817525e40b0c57bd6822159f79384357"
+  sign_in_count: 5
